# happyword

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  build-profile.json5  pytest.ini
cocos/native/engine/ios/: CMakeLists.txt
server/: .dockerignore  .env.local.example  .gitignore  Dockerfile  E2E_PREVIEW_TODO.md  README.md  mock_ui_server.py  pyproject.toml  vercel.json
server/api/: index.py
server/app/: config.py  deps.py  deps_email.py  main.py  template_paths.py
server/app/models/: audit_log.py  category.py  child_checkin.py  child_profile.py  cloud_coin_txn.py  cloud_wishlist_item.py  debug_session.py  debug_trace.py  device_binding.py  email_verification.py  family.py  family_pack_definition.py  family_pack_draft.py  family_pack_pointer.py  family_word_pack.py  feedback.py  lesson_import_draft.py  llm_draft.py  oauth_handoff_ticket.py  oauth_identity.py  oauth_pending_identity.py  pack_pointer.py  pair_token.py  parent_inbox_msg.py  redemption_request.py  synced_word_stat.py  system_config.py  user.py  word.py  word_pack.py
server/app/routers/: admin_assets.py  admin_categories.py  admin_cron.py  admin_drafts.py  admin_global_pack.py  admin_lessons.py  admin_llm.py  admin_packs.py  admin_pages.py  admin_stats.py  admin_words.py  auth.py  child_checkins.py  child_family_pack.py  child_profile.py  child_wishlist.py  child_word_stats.py  family_lessons.py  legacy_route_aliases.py  oauth_alipay.py  oauth_apple.py  oauth_common.py  oauth_google.py  oauth_wechat.py  pair.py  parent_account.py  parent_api.py  parent_auth.py  parent_family_pack.py  parent_inbox.py  parent_packs_pages.py  parent_pages.py  preview_debug.py  public_global_pack.py  public_packs.py  public_pages.py
server/app/schemas/: account.py  admin_asset.py  admin_category.py  admin_draft.py  admin_lesson.py  admin_pack.py  admin_stats.py  admin_word.py  auth.py  checkins.py  child_self.py  cloud_wishlist.py  family_pack.py  global_pack.py  inbox.py  llm.py  pack.py  pair.py  parent_auth.py  parent_child.py  parent_password.py  parent_report.py  redemption.py  word_stats_sync.py
server/app/services/: account_deletion_service.py  admin_audit_service.py  admin_console_overview_service.py  admin_console_service.py  alipay_oauth_service.py  apple_oauth_service.py  audit_service.py  auth_service.py  blob_service.py  category_service.py  checkin_sync_service.py  child_profile_service.py  cloud_wishlist_service.py  e2e_llm_stub.py  email_provider.py  family_pack_import_service.py  family_pack_service.py  family_service.py  feedback_service.py  global_pack_service.py  google_oauth_service.py  image_generation_providers.py  lesson_service.py  llm_providers.py  llm_service.py  notification_service.py  oauth_handoff_service.py  oauth_login_service.py  oauth_pending_identity_service.py  oauth_redirect_urls.py  oauth_return_origin_service.py  oauth_state_service.py  otp_service.py  pack_service.py  pack_story_service.py  pair_service.py  parent_password_service.py  parent_report_service.py  preview_debug_service.py  preview_manifest_service.py  (+7 more)
server/app/static/: features.css  landing.css  parent.css
server/app/templates/: _base.html  _icp_footer.html  _legal_base.html  _nav.html  features.html  landing.html
server/app/templates/admin/: audit_logs.html  base.html  dashboard.html  device_restore.html  device_revoke.html  devices_list.html  family_pack_detail.html  feedback.html  (+9 more)
server/scripts/: README.md  backup_pack.py  cos_storage_smoke.py  create_admin_user.py  db_connectivity_smoke.py  db_inventory.py  e2e_drop_old_pr_dbs.py  e2e_reset_db.py  flexdb_api_smoke.py  migrate_global_packs_v0_6_5.py  migrate_vercel_blob_to_cos.py  publish_pack.py  resolve_preview_db_name.py  seed_from_rawfile.py  seed_parent_session.py  update_preview_manifest.mjs  vercel_prune_branch_deployments.mjs  vercel_should_skip_build.sh
server/tests/: conftest.py  test_account_deletion.py  test_admin_assets.py  test_admin_bootstrap.py  test_admin_categories.py  test_admin_cron.py  test_admin_drafts.py  test_admin_global_pack_router.py  test_admin_lessons.py  test_admin_llm_endpoint.py  test_admin_pages.py  test_admin_stats.py  test_admin_words.py  test_alipay_oauth_service.py  test_apple_oauth_callbacks.py  test_apple_oauth_service.py  test_audit_log.py  test_auth_login.py  test_auth_me.py  test_auth_service.py  test_backup_pack.py  test_child_checkins.py  test_child_packs_merged.py  test_child_self_profile.py  test_cloud_wishlist.py  test_cloudbase_root_dockerfile.py  test_config.py  test_config_db_name.py  test_db_connectivity_smoke.py  test_db_inventory.py  test_device_management.py  test_e2e_async_runner_policy.py  test_e2e_auth_utils.py  test_e2e_drop_old_pr_dbs.py  test_e2e_llm_stub.py  test_e2e_reset_db.py  test_email_provider.py  test_family_pack_batch.py  test_family_pack_definition_v065_schema.py  test_family_pack_import.py  (+64 more)
server/tests/e2e/: __init__.py  conftest.py  test_admin_auth_e2e.py  test_admin_categories_e2e.py  test_admin_packs_e2e.py  test_admin_words_e2e.py  test_child_family_pack_e2e.py  test_child_word_stats_e2e.py  test_global_packs_e2e.py  test_health_e2e.py  test_legal_pages_e2e.py  test_lesson_import_cron_e2e.py  test_llm_features_e2e.py  test_pair_flow_e2e.py  test_parent_family_pack_e2e.py  test_parent_otp_e2e.py  test_preflight_detection.py  test_public_packs_e2e.py  test_root_redirect_e2e.py
server/tools/: init_env_local_from_home.py
tools/parity/: README.md  pyproject.toml
tools/parity/tests/: test_cli_smoke.py  test_doc_clues.py  test_doc_scope.py  test_extractors.py  test_gap_rules.py  test_metadata_and_capture.py  test_skill_definition.py  test_visual_diff.py
tools/parity_scout/: README.md  doctor.py  excerpts.py  page_suite_map.yml  planner.py  promote.py  prune.py  pyproject.toml  registry.py  runner.py  scout.py  spec_extract.py
tools/parity_scout/adapters/: __init__.py  android.py  harmony.py  ios.py
tools/parity_scout/tests/: conftest.py  test_android_adapter.py  test_excerpts.py  test_planner.py  test_promote.py  test_registry.py  test_runner.py  test_spec_extract.py
(+1532 files in other folders)
