[project]
name = "happyword-server"
version = "0.5.1"
description = "Content backend for WordMagicGame (HarmonyOS NEXT client)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "motor>=3.6",
    # Beanie 1.27 calls list_collection_names with authorizedCollections=True
    # which mongomock-motor does not support; pin until upstream catches up.
    "beanie>=1.26,<1.27",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    # Use bcrypt directly; passlib is unmaintained and incompatible with bcrypt 5.x.
    "bcrypt>=4.2",
    "openai>=1.55",
    "httpx>=0.27",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mongomock-motor>=0.0.34",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-python-jose>=3.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
