[project]
name = "happyword-parity-gap"
version = "0.1.0"
description = "Find actionable iOS and Android parity gaps against the HarmonyOS baseline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10.4.0",
]

[project.scripts]
parity-gap = "parity_audit.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parity_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
